<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registrieren"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sebastian.gefee.Registrieren">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schriftzug"
        android:textSize="80dp"
        android:layout_marginTop="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_marginTop="200dp"
        android:layout_below="@+id/textView2"
        android:hint="@string/username_hint"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:hint="@string/pw_1_hint"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_below="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:hint="@string/email_hint"
        android:layout_marginTop="15dp" />

    <Button
        android:text="@string/register_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/button2"
        android:layout_below="@+id/editText3"
        android:layout_alignStart="@+id/editText3" />


</RelativeLayout>
